replace string.isBlank with common lang stringutils.isblank